update user register
